java/go-guestbook-k8s-recaptcha-demo/kubernetes-manifests/guestbook-backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-guestbook-backend
  labels:
    app: guestbook
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: guestbook
    tier: backend
  ports:
  - port: 8080
    targetPort: http-server
