java/go-guestbook-k8s-recaptcha-demo/kubernetes-manifests/guestbook-frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-guestbook-frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  selector:
    app: guestbook
    tier: frontend
  type: NodePort
  ports:
   - port: 80
     targetPort: http-server
